# wongus

./: Cargo.toml  license.txt  readme.md  tsconfig.json  wongus.d.ts
example/: config.json  index.html  script.js  style.css
source/: Cargo.toml  generate.sh  package.nix  shot1.avif  wongus.d.ts
source/src/: lib.rs  setup.js
src/: ipc_setup.js  main.rs  setup.d.ts  setup.js
