[package]
name = "wongus"
version = "0.1.0"
edition = "2021"

[dependencies]
aargvark = "0.2"
gtk = { version = "0.18", features = ["v3_24"] }
gtk-layer-shell = "0.8"
http = "1"
loga = "0.4"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.28"
tokio = { version = "1", features = [
    "rt",
    "process",
    "sync",
    "macros",
    "time",
    "io-util",
    "fs",
] }
wry = "0.39"
