[package]
name = "wongus"
version = "0.1.0"
edition = "2021"
description = "Desktop widgets at the speed of internet standards"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/wongus"
license = "ISC"

[dependencies]
aargvark = "0.6"
gtk = { version = "0.18", features = ["v3_24"] }
gtk-layer-shell = "0.8"
http = "1"
htwrap = "0.11"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
loga = "0.5"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.31"
tokio = { version = "1", features = [
    "rt",
    "process",
    "sync",
    "macros",
    "time",
    "io-util",
    "fs",
] }
wry = "0.48"
schemars = "0.8"
flowcontrol = "0.2"
